# wikipedia-rs-wasm

./: CHANGELOG.md  Cargo.toml  README.md
src/: http.rs  iter.rs  lib.rs
tests/: integration.rs
