[package]
name = "wikipedia-wasm"
version = "0.1.0"
authors = ["Nvt5"]
license = "MIT"
description = "Access wikipedia articles from Rust"
readme = "README.md"
edition = "2021"
repository = "https://github.com/Nvt500/wikipedia-rs-wasm"
homepage = "https://github.com/Nvt500/wikipedia-rs-wasm"
keywords = ["wikipedia", "api", "wasm"]

[features]
default = ["http-client"]
http-client = ["reqwest", "url"]

[dependencies]
serde_json = "1.0.127"
reqwest = { version = "0.12.7", optional = true }
url = { version = "2.5.2", optional = true }
failure = "0.1.8"
async-recursion = "1.1.1"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["rt", "macros"] }
wasm-bindgen-test = "0.3.43"
